feat(chat): Implement message reactions and vanihs mode auto-deletion
Introduces a reaction system for messages, allowing users to add emojis to their chats. Also implements automatic deletion of messages in vanish mode after a set duration.

The UI has been updated to support displaying reactions and a user-friendly way to add them. The `PeerData` type has been extended to accommodate reaction messages. Additionally, `MessageBubble` component now handles long-press events to trigger the reaction picker.

The `App.tsx` now includes logic to clear vanished messages and displays connection errors. The `Header.tsx` component also displays partner's age and gender.

HTML structure was slightly adjusted to ensure full height for the body and root div, supporting the new UI elements.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en" class="dark h-full">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://picsum.photos/32/32" />
@@ -73,8 +73,8 @@
 }
 </script>
 </head>
-  <body class="bg-white dark:bg-[#05050A] text-slate-900 dark:text-slate-200 antialiased overflow-hidden transition-colors duration-300">
-    <div id="root"></div>
+  <body class="bg-white dark:bg-[#05050A] text-slate-900 dark:text-slate-200 antialiased transition-colors duration-300 h-full">
+    <div id="root" class="h-full"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
