feat: Enhance global chat with PeerJS integration
Integrate PeerJS into the global chat functionality to enable direct peer-to-peer messaging and connection initiation between users in the global chat. This includes:

-   Adding `senderPeerId` to global chat messages to identify the originating peer.
-   Passing the current user's PeerJS ID to the `useGlobalChat` hook.
-   Updating the `useHumanChat` hook to facilitate sending direct friend requests via PeerJS connections.
-   Introducing the `sendDirectFriendRequest` prop to `SocialHub` and enabling its use.
-   Adding `react-dom` as a dependency to support potential UI rendering needs.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     "tailwind-merge": "https://aistudiocdn.com/tailwind-merge@^3.4.0",
     "clsx": "https://aistudiocdn.com/clsx@^2.1.1",
     "peerjs": "https://aistudiocdn.com/peerjs@^1.5.5",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.86.2"
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.86.2",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.1"
   }
 }
 </script>
